Improved debug and trace logging JAXB plugin strategies.